{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 134,
  "lineage": "832e1e97-70c1-19d5-0494-9c9e3927b998",
  "resources": [
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:439800815305:loadbalancer/app/blue-green-dcelfqiaowmzt-lb/78492f03e3545778",
            "arn_suffix": "app/blue-green-dcelfqiaowmzt-lb/78492f03e3545778",
            "dns_name": "blue-green-dcelfqiaowmzt-lb-1585868930.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:439800815305:loadbalancer/app/blue-green-dcelfqiaowmzt-lb/78492f03e3545778",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blue-green-dcelfqiaowmzt-lb",
            "security_groups": [
              "sg-076f2b1344f35df63"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07d0e355cd4655c9a"
              },
              {
                "subnet_id": "subnet-09703c6f9e5c52a39"
              },
              {
                "subnet_id": "subnet-09cbeb85d2db4b59c"
              }
            ],
            "subnets": [
              "subnet-07d0e355cd4655c9a",
              "subnet-09703c6f9e5c52a39",
              "subnet-09cbeb85d2db4b59c"
            ],
            "tags": {
              "ResourceGroup": "blue-green-dcelfqiaowmzt"
            },
            "vpc_id": "vpc-01762c1308d0fcb61",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.lb_sg.aws_security_group.security_group",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:439800815305:listener/app/blue-green-dcelfqiaowmzt-lb/78492f03e3545778/cf769c5a434c79b2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:439800815305:targetgroup/blue-green-dcelfqiaowmzt-blue/2ab23561ca02d40a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:439800815305:listener/app/blue-green-dcelfqiaowmzt-lb/78492f03e3545778/cf769c5a434c79b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:439800815305:loadbalancer/app/blue-green-dcelfqiaowmzt-lb/78492f03e3545778",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.base.aws_lb.lb",
            "module.base.aws_lb_target_group.blue_target_group",
            "module.base.aws_lb_target_group.green_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:439800815305:targetgroup/blue-green-dcelfqiaowmzt-green/2b44e8ccd83ac8af",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:439800815305:listener-rule/app/blue-green-dcelfqiaowmzt-lb/78492f03e3545778/cf769c5a434c79b2/9b26f492cb5e437e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/stg/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:439800815305:listener-rule/app/blue-green-dcelfqiaowmzt-lb/78492f03e3545778/cf769c5a434c79b2/9b26f492cb5e437e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:439800815305:listener/app/blue-green-dcelfqiaowmzt-lb/78492f03e3545778/cf769c5a434c79b2",
            "priority": 100
          },
          "dependencies": [
            "module.base.aws_lb.lb",
            "module.base.aws_lb_listener.lb_listener",
            "module.base.aws_lb_target_group.blue_target_group",
            "module.base.aws_lb_target_group.green_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:439800815305:targetgroup/blue-green-dcelfqiaowmzt-blue/2ab23561ca02d40a",
            "arn_suffix": "targetgroup/blue-green-dcelfqiaowmzt-blue/2ab23561ca02d40a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:439800815305:targetgroup/blue-green-dcelfqiaowmzt-blue/2ab23561ca02d40a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blue-green-dcelfqiaowmzt-blue",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ResourceGroup": "blue-green-dcelfqiaowmzt"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:439800815305:targetgroup/blue-green-dcelfqiaowmzt-green/2b44e8ccd83ac8af",
            "arn_suffix": "targetgroup/blue-green-dcelfqiaowmzt-green/2b44e8ccd83ac8af",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:439800815305:targetgroup/blue-green-dcelfqiaowmzt-green/2b44e8ccd83ac8af",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blue-green-dcelfqiaowmzt-green",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ResourceGroup": "blue-green-dcelfqiaowmzt"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:security-group/sg-076f2b1344f35df63",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076f2b1344f35df63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20201005001931077900000007",
            "name_prefix": "",
            "owner_id": "439800815305",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06ce3658c65dab566",
            "domain": "vpc",
            "id": "eipalloc-0c704d48cd32feaf2",
            "network_interface": "eni-0e93e6244ef5a37d5",
            "private_dns": "ip-10-0-101-204.us-west-2.compute.internal",
            "private_ip": "10.0.101.204",
            "public_dns": "ec2-44-237-16-89.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.16.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:internet-gateway/igw-0ae567b3e159005c3",
            "id": "igw-0ae567b3e159005c3",
            "owner_id": "439800815305",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc"
            },
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c704d48cd32feaf2",
            "id": "nat-0c5547d442adecaa2",
            "network_interface_id": "eni-0e93e6244ef5a37d5",
            "private_ip": "10.0.101.204",
            "public_ip": "44.237.16.89",
            "subnet_id": "subnet-07d0e355cd4655c9a",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b0fbce2f3cea75d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c5547d442adecaa2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b0fbce2f3cea75d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_nat_gateway.this",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ae567b3e159005c3",
            "id": "r-rtb-090a0918262e2b1d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090a0918262e2b1d3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b0fbce2f3cea75d",
            "owner_id": "439800815305",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c5547d442adecaa2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-private"
            },
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-090a0918262e2b1d3",
            "owner_id": "439800815305",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae567b3e159005c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-public"
            },
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2b89702870b19cf",
            "route_table_id": "rtb-02b0fbce2f3cea75d",
            "subnet_id": "subnet-07b271959f5e75058"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d2e2e0648368491",
            "route_table_id": "rtb-02b0fbce2f3cea75d",
            "subnet_id": "subnet-0816536a6b0074ad6"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff3b103ca2272f2e",
            "route_table_id": "rtb-02b0fbce2f3cea75d",
            "subnet_id": "subnet-04ccad0532bed2c40"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e6a5e6113e4aba9",
            "route_table_id": "rtb-090a0918262e2b1d3",
            "subnet_id": "subnet-07d0e355cd4655c9a"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0395dbb0be5dc5081",
            "route_table_id": "rtb-090a0918262e2b1d3",
            "subnet_id": "subnet-09cbeb85d2db4b59c"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2370a2e2656896d",
            "route_table_id": "rtb-090a0918262e2b1d3",
            "subnet_id": "subnet-09703c6f9e5c52a39"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:subnet/subnet-07b271959f5e75058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07b271959f5e75058",
            "map_public_ip_on_launch": false,
            "owner_id": "439800815305",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:subnet/subnet-0816536a6b0074ad6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0816536a6b0074ad6",
            "map_public_ip_on_launch": false,
            "owner_id": "439800815305",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-private-us-west-2b"
            },
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:subnet/subnet-04ccad0532bed2c40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04ccad0532bed2c40",
            "map_public_ip_on_launch": false,
            "owner_id": "439800815305",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-private-us-west-2c"
            },
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:subnet/subnet-07d0e355cd4655c9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-07d0e355cd4655c9a",
            "map_public_ip_on_launch": true,
            "owner_id": "439800815305",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:subnet/subnet-09cbeb85d2db4b59c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-09cbeb85d2db4b59c",
            "map_public_ip_on_launch": true,
            "owner_id": "439800815305",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-public-us-west-2b"
            },
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:subnet/subnet-09703c6f9e5c52a39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-09703c6f9e5c52a39",
            "map_public_ip_on_launch": true,
            "owner_id": "439800815305",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc-public-us-west-2c"
            },
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.data.aws_availability_zones.available",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:vpc/vpc-01762c1308d0fcb61",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d5232663629d196",
            "default_route_table_id": "rtb-0ce196bbc12a4a678",
            "default_security_group_id": "sg-01991de5ad62380b6",
            "dhcp_options_id": "dopt-ead8158f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01762c1308d0fcb61",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ce196bbc12a4a678",
            "owner_id": "439800815305",
            "tags": {
              "Name": "blue-green-dcelfqiaowmzt-vpc"
            }
          },
          "dependencies": [
            "module.base.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.webserver_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:439800815305:security-group/sg-06d40bc6a3b60a577",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d40bc6a3b60a577",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076f2b1344f35df63"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20201005001933591000000008",
            "name_prefix": "",
            "owner_id": "439800815305",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01762c1308d0fcb61"
          },
          "dependencies": [
            "module.base.module.lb_sg.aws_security_group.security_group",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.random_string.rand"
          ]
        }
      ]
    }
  ]
}